--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "magicland-system-app",
+  "name": "magicland-system-teacher",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,9 +11,9 @@
   "dependencies": {
     "@expo-google-fonts/baloo-2": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/config-plugins": "~7.2.2",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@expo/config-plugins": "~6.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -23,33 +23,36 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
-    "expo": "~49.0.15",
-    "expo-constants": "~14.4.2",
-    "expo-file-system": "~15.4.5",
+    "expo": "^48.0.0",
+    "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
     "expo-firebase-core": "^6.0.0",
     "expo-firebase-recaptcha": "^2.3.1",
-    "expo-font": "~11.4.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-linking": "~5.0.2",
-    "expo-status-bar": "~1.6.0",
+    "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-status-bar": "~1.4.4",
     "firebase": "^9.6.11",
     "formik": "^2.4.5",
-    "lottie-react-native": "^6.4.1",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.4",
     "react-native-calendars": "^1.1303.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-element-dropdown": "^2.10.1",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-otp-textinput": "^1.1.3",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.10.3",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "11.26.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "yup": "^1.3.2"
